syntax = "proto3";
import public "google/protobuf/timestamp.proto";

option java_outer_classname = "OrderBO_PRO";
option java_package = "com.purefun.fams.trade.order.pro";

message OrderBO {
     string uuid = 1;
     sint64 boid = 2;
    string account = 3;
    string security_code = 4;
    string exch = 5;
    string security_type = 6;
    string tradeDate = 7;
    string orderId = 8;
    string orderStatus = 9;
    string orderRejectedReson = 10;
    string orderType = 11;
    double orderPrice = 12;
    sint64 orderVolume = 13;
    string direction = 14;
    string execStatus = 15;
    bool withdrawFlag = 16;
    sint64 withdrawVolume = 17;
}
